Refactor Jetty HTTP client, add HTTP/2 streams and code improvements (#533)
Signed-off-by: Jan N. Klug <github@klug.nrw>